<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_notes"
            android:icon="@drawable/ic_all_notes"
            android:title="@string/all_notes" />
        <item
            android:id="@+id/nav_recent_edit"
            android:icon="@drawable/ic_recent_edit"
            android:title="@string/recent_edit" />
        <item
            android:id="@+id/nav_waste_basket"
            android:icon="@drawable/ic_waste_basket"
            android:title="@string/waste_basket" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_app" />
        </menu>
    </item>
</menu>
