<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2013-2019 Federico Iosue (federico@iosue.it)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_attachment"
        android:icon="@drawable/ic_attachment_white_24dp"
        android:orderInCategory="100"
        android:title="@string/attachment"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_camera"
        android:icon="@drawable/ic_camera_white_24dp"
        android:orderInCategory="200"
        android:title="@string/camera"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_send"
        android:orderInCategory="1000"
        android:title="@string/send"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_delete"
        android:orderInCategory="1100"
        android:title="@string/remove"
        app:showAsAction="ifRoom" />

</menu>
