<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2013-2019 Federico Iosue (federico@iosue.it)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="600"
        android:title="@string/sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/switch_mode"
        android:orderInCategory="100"
        android:title="@string/mode_switch"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
